# Make-AI-Great-Again

./: .gitignore  AnalysisTools.py  Main.py  README.md  ReadMe.md  TwitterTools.py  dontInclude.txt  errors.txt  pyproject.toml  sampleTweets.txt
debates/: 20wut.ipynb  June24.ipynb
debates/settings/: debate_util.py
debates/utilities/: debate_util.py  xapi.py
debates/utilities/text_files/: dontInclude.txt
support_functions/: analysis_tools.py  twitter_tools.py
support_functions/text_files/: dontInclude.txt
